// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test TaskResultList/Result/FileMode should match snapshot 1`] = `
<div>
  <div
    class="css-1w1lpb5"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-collapse-item"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            <div
              class="file-result-card-wrapper result-card-header"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 32px;"
                >
                  <span
                    class="number"
                  >
                    #
                    1
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="file-info"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                    <a
                      class="file-info-name"
                      href="/sqle/project/300200/order/123/files/538/sqls"
                    >
                      create_table_if_not_exist.sql
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="result-card-status-wrap"
              >
                <span
                  class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                >
                  准备执行
                </span>
                <div
                  class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                  role="separator"
                />
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-notice css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                            fill="#6094FC"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-warn css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                            fill="#EBAD1C"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test TaskResultList/Result/FileMode should match snapshot 2`] = `
<div>
  <div
    class="css-1w1lpb5"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-collapse-item"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            <div
              class="file-result-card-wrapper result-card-header"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 32px;"
                >
                  <span
                    class="number"
                  >
                    #
                    1
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="file-info"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                    <a
                      class="file-info-name"
                      href="/sqle/project/300200/order/123/files/538/sqls"
                    >
                      create_table_if_not_exist.sql
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="result-card-status-wrap"
              >
                <span
                  class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                >
                  准备执行
                </span>
                <div
                  class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                  role="separator"
                />
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-notice css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                            fill="#6094FC"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-warn css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                            fill="#EBAD1C"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test TaskResultList/Result/FileMode should render audit result count 1`] = `
<div>
  <div
    class="css-1w1lpb5"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-collapse-item"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            <div
              class="file-result-card-wrapper result-card-header"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 32px;"
                >
                  <span
                    class="number"
                  >
                    #
                    1
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="file-info"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                    <a
                      class="file-info-name"
                      href="/sqle/project/300200/order/123/files/538/sqls"
                    >
                      create_table_if_not_exist.sql
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="result-card-status-wrap"
              >
                <span
                  class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                >
                  准备执行
                </span>
                <div
                  class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                  role="separator"
                />
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-notice css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                            fill="#6094FC"
                          />
                        </svg>
                      </span>
                      <span>
                        5
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-warn css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                            fill="#EBAD1C"
                          />
                        </svg>
                      </span>
                      <span>
                        4
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-tag ant-tag-red ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-sd5et5 css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-error css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 17C4.85775 17 1.5 13.6423 1.5 9.5C1.5 5.35775 4.85775 2 9 2C13.1423 2 16.5 5.35775 16.5 9.5C16.5 13.6423 13.1423 17 9 17ZM9 8.4395L6.879 6.31775L5.81775 7.379L7.9395 9.5L5.81775 11.621L6.879 12.6823L9 10.5605L11.121 12.6823L12.1823 11.621L10.0605 9.5L12.1823 7.379L11.121 6.31775L9 8.4395Z"
                            fill="#F66074"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test TaskResultList/Result/FileMode should render collapse children and called request 1`] = `
<div>
  <div
    class="css-1w1lpb5"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-disabled="false"
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            <div
              class="file-result-card-wrapper result-card-header"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 32px;"
                >
                  <span
                    class="number"
                  >
                    #
                    1
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="file-info"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                    <a
                      class="file-info-name"
                      href="/sqle/project/300200/order/123/files/538/sqls"
                    >
                      create_table_if_not_exist.sql
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="result-card-status-wrap"
              >
                <span
                  class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                >
                  准备执行
                </span>
                <div
                  class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                  role="separator"
                />
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-notice css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                            fill="#6094FC"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="custom-icon custom-icon-level-warn css-u3jcp4"
                        role="img"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                            fill="#EBAD1C"
                          />
                        </svg>
                      </span>
                      <span>
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <section
              class="css-1r1dawj"
            >
              <div
                class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <caption
                              class="ant-table-caption"
                            >
                              <div
                                class="flex-display flex-end-horizontal"
                              >
                                当前仅展示前5条数据，
                                <a
                                  href="/sqle/project/300200/order/123/files/538/sqls"
                                >
                                  查看更多
                                </a>
                              </div>
                            </caption>
                            <colgroup>
                              <col
                                style="width: 100px;"
                              />
                            </colgroup>
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  序号
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-large-width"
                                  scope="col"
                                >
                                  执行语句
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  审核结果
                                </th>
                                <th
                                  class="ant-table-cell exec-status-column"
                                  scope="col"
                                >
                                  执行结果
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="1"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  1
                                </td>
                                <td
                                  class="ant-table-cell ellipsis-column-large-width"
                                >
                                  <div
                                    class="css-4mzo37"
                                  >
                                    <div
                                      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-bj9uhl"
                                    >
                                      <span>
                                        <span
                                          class="hljs-keyword"
                                        >
                                          SELECT
                                        </span>
                                         
                                        <span
                                          class="hljs-number"
                                        >
                                          1
                                        </span>
                                        ;
                                      </span>
                                    </div>
                                    <div
                                      class="css-1s8kb8e"
                                    >
                                      <span
                                        aria-label="copy"
                                        class="anticon anticon-copy"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="copy"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                          />
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="audit-result-wrapper"
                                  >
                                    <div
                                      class=" css-1v03opz"
                                    >
                                      <div
                                        class="css-1avyf41"
                                      >
                                        <span
                                          class="icon-wrapper"
                                        >
                                          <svg
                                            fill="none"
                                            height="20"
                                            viewBox="0 0 20 20"
                                            width="20"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
                                              fill="#41BF9A"
                                            />
                                          </svg>
                                        </span>
                                        <span
                                          class="text-wrapper"
                                        >
                                          test message
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="ant-table-cell exec-status-column"
                                >
                                  <span
                                    class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-bj9uhl"
                                  >
                                    准备执行
                                  </span>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
